syntax = "proto3";
package exomonad.common;

// Shared primitive types used across the ExoMonad FFI boundary.

// Unique session identifier for a Claude Code session.
message SessionId {
  string value = 1;
}

// Agent role (determines which WASM plugin is loaded).
enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_DEV = 1;     // Developer agent
  ROLE_TL = 2;      // Tech lead agent
  ROLE_PM = 3;      // Product manager agent
  ROLE_REVIEWER = 4; // Code reviewer agent
}

// Tool permission levels for hook decisions.
enum ToolPermission {
  TOOL_PERMISSION_UNSPECIFIED = 0;
  TOOL_PERMISSION_ALLOW = 1;       // Tool is allowed
  TOOL_PERMISSION_DENY = 2;        // Tool is denied
  TOOL_PERMISSION_ASK = 3;         // Ask user for permission
  TOOL_PERMISSION_SKIP = 4;        // Skip this tool use
}

// Git branch reference.
message GitBranch {
  string name = 1;
}

// Git commit reference.
message GitCommit {
  string sha = 1;
  string message = 2;
  string author = 3;
  int64 timestamp_unix = 4;
}

// File path (absolute or relative).
message FilePath {
  string path = 1;
}

// Directory path (absolute or relative).
message DirectoryPath {
  string path = 1;
}

// GitHub issue reference.
message IssueRef {
  string owner = 1;
  string repo = 2;
  int32 number = 3;
}

// GitHub pull request reference.
message PullRequestRef {
  string owner = 1;
  string repo = 2;
  int32 number = 3;
}
